--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="assets/js/script.js"></script>
+    <script async src="assets/js/script.js"></script>
   </body>
 </html>
